...
      initialRouteName="Login"
    >
      <AuthStack.Screen
        name="Login"
        component={SafeLoginScreen}
        options={{
          title: 'Sign In',
          animationTypeForReplace: 'push',
        }}
      />
      
      <AuthStack.Screen
        name="Register"
...
